--- a/HondradeCRUD/appsettings.json
+++ b/HondradeCRUD/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=.;Initial Catalog=BootcampDB;Integrated Security=True;Trust Server Certificate=True"
+  }
 }
